--- a/src/components/ImageCard/ImageCard.module.css
+++ b/src/components/ImageCard/ImageCard.module.css
@@ -1,4 +1,6 @@
-.card {
-  width: calc((100%-3 * 10px) / 4);
-  height: 200px;
+img {
+  width: 100%;
+  height: 240px;
+  object-fit: cover;
+  object-position: center;
 }
