--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -2,10 +2,12 @@
   margin: 20px;
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  row-gap: 10px;
+  column-gap: 10px;
+  padding: 0 24px;
 }
 
 .galleryItem {
-  width: calc((100%-3 * 10px) / 4);
+  width: calc((100% - 3 * 10px) / 4);
   height: 200px;
 }
