--- a/src/components/LoadMoreBtn/LoadMoreBtn.module.css
+++ b/src/components/LoadMoreBtn/LoadMoreBtn.module.css
@@ -1,14 +1,11 @@
 .button {
   display: block;
-  margin: 50px auto;
-  width: 120px;
-  font-size: 16px;
-  padding: 4px;
-  background-color: #bbbbb58c;
-  justify-content: center;
-  border: none;
-  border-radius: 4px;
-  transition: background-color 300ms ease-in-out, font-weight 300ms ease-in-out;
+  border-radius: 20%;
+  font-size: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #f8f807e7;
+  margin-top: 170px;
 }
 .button:hover,
 .button:focus {
