--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,8 +1,9 @@
 header {
   width: 100%;
+  height: 20%;
   display: flex;
-  justify-content: center; /* Вирівнює елементи на протилежні сторони */
-  align-items: center; /* Вирівнює елементи по вертикалі */
+  justify-content: center;
+  align-items: center;
   background-color: #400bd39c;
   color: white;
   padding: 20px;
@@ -13,17 +14,19 @@ header {
   gap: 10px;
 }
 .input {
-  height: 100px;
   font-size: 20px;
   padding: 10px;
+  border-radius: 20px;
 }
 .input:focus {
   border: 2px solid #0fd1909d;
 }
 .button {
-  width: 100px;
   border-radius: 20%;
   font-size: 20px;
+  justify-content: center;
+  align-items: center;
+  background-color: #f8f807e7;
 }
 .button:hover,
 .button:focus {
